Got list of site from Dad for what to have here.
Also added FontAwesome icons from my key.

--- a/index.html
+++ b/index.html
@@ -1,106 +1,93 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BöröczIstvan's Index Page</title>
+    <title>Böröcz Istvan's Index</title>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="BöröczIstvan's Index Page">
+    <meta name="description" content="Böröcz Istvan's Home/Index Page">
     <meta name="author" content="Peter Böröcz on behalf of Istvan Böröcz">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito&family=Raleway&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pangolin&family=Raleway&display=swap">
+    <script defer src="https://kit.fontawesome.com/a33313a914.js" crossorigin="anonymous"></script>
+
   </head>
   <body>
     <section class="hero is-small is-info">
       <div class="hero-body">
-        <p class="title">Böröcz Istvan's Index Page</p>
-      </div>
-    </section>
-    <section class="section">
-      <ul>
-        <li><a href="https://mail.google.com">Mail</a></li>
-        <li><a href="https://www.weather.com">Weather</a></li>
-        <li><a href="https://www.optimalsportswatch.com">Optimal Sports Watching</a></li>
-      </ul>
-    </section>
-    <hr/>
-    <section class="section">
-      <h3 class="subtitle">Old Links</h3>
-      <div ALIGN="center">
-        <table BORDER="0" WIDTH="924" height="100" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" cellpadding="0">
-          <tr>
-            <td WIDTH="184" HEIGHT="19" VALIGN="top" ALIGN="left" NOWRAP><font face="Arial"><b><a href="http://admin.1and1.com">1and1</a></b></font></td>
-            <td WIDTH="197" HEIGHT="19" VALIGN="top" ALIGN="left" NOWRAP><b><font face="Arial" color="#00FFFF"><span lang="en-us"><a href="http://www.google.com">Google</a> </span></font></b></td>
-            <td WIDTH="184" HEIGHT="19" VALIGN="top" ALIGN="left" NOWRAP><font face="Arial"><strong><a href="../E4all/index.html">Medlist.com</a> r</strong></font></td>
-            <td WIDTH="437" HEIGHT="17" VALIGN="top" ALIGN="left" NOWRAP><font face="Arial"><strong><a href="http://www.medlist.com/Alaska">Alaska</a></strong></font></td>
-          </tr>
-          <tr>
-            <td WIDTH="184" HEIGHT="19" VALIGN="top" ALIGN="left" NOWRAP><b><a href="http://www.Böröcz.net"><span lang="en-us"><font color="#CCCCCC" face="Arial">B</font></span><font face="Arial"><font color="#CCCCCC">o<span lang="hu">r</span>o<span lang="hu">czJ</span></font><span lang="hu"><font color="#CCCCCC"> Ph.D.</font></span></font></a></b></td>
-            <td WIDTH="184" HEIGHT="19" VALIGN="top" ALIGN="left" NOWRAP><b><a target="_blank" href="http://www.ncbi.nlm.nih.gov/entrez/query.fcgi"><font face="Arial">PubMed honlapja</font></a></b></td>
-            <td WIDTH="437" HEIGHT="12" VALIGN="top" ALIGN="left" NOWRAP><b><a href="../Missi_2015">Mississippi trip 2015</a></b></td>
-          </tr>
-          <tr>
-            <td WIDTH="184" HEIGHT="14" VALIGN="top" ALIGN="left" NOWRAP><b><font face="Arial" color="#C0C0C0">Böröcz.info</font></b></td>
-            <td WIDTH="197" HEIGHT="12" VALIGN="top" ALIGN="left" NOWRAP>Magyar dolgok</td>
-            <td WIDTH="184" HEIGHT="1" VALIGN="top" ALIGN="left" NOWRAP><b><font face="Arial"><a href="Varosok.htm">Varosok</a></font></b></td>
-            <td WIDTH="402" HEIGHT="23" VALIGN="top" ALIGN="left" NOWRAP><font face="Arial"><b><a href="travel.htm">Travel</a></b></font></td>
-          </tr>
-          <tr>
-            <td WIDTH="184" HEIGHT="1" VALIGN="top" ALIGN="left" NOWRAP><font face="Arial"><b><font color="#FEF0FA"><a href="https://www.google.com/calendar/render?tab=oc">Naptar</a></font></b></font></td>
-            <td WIDTH="197" HEIGHT="3" VALIGN="top" ALIGN="left" NOWRAP><font face="Arial"><b><a href="http://hirtv.hu/">Magyar TV hirek</a></b></font></td>
-            <td WIDTH="184" HEIGHT="17" VALIGN="top" ALIGN="left" NOWRAP><b><font face="Arial"><span lang="hu"><a href="http://scholar.google.com/">Skolar</a></span> </font></b></td>
-            <td WIDTH="402" HEIGHT="22" VALIGN="top" ALIGN="left" NOWRAP><b><font face="Arial"><a href="http://www.weather.com">Weather</a></font></b></td>
-          </tr>
-          <tr>
-            <td WIDTH="184" HEIGHT="14" VALIGN="top" ALIGN="left" NOWRAP><b><font face="Arial"><a href="http://dictzone.com/english-hungarian-dictionary/">DictZone</a></font></b></td>
-            <td WIDTH="197" HEIGHT="20" VALIGN="top" ALIGN="left" NOWRAP><b><a href="http://delicast.com/tv/Duna_TV">DUNA TV</a></b></td>
-            <td WIDTH="184" HEIGHT="4" VALIGN="top" ALIGN="left" NOWRAP></td>
-            <td WIDTH="402" HEIGHT="19" VALIGN="top" ALIGN="left" NOWRAP><b><font face="Arial"><a href="../SisCity/index.html">Sister City</a>History</font></b></td>
-          </tr>
-          <tr>
-            <td WIDTH="184" HEIGHT="6" VALIGN="top" ALIGN="left" NOWRAP>Magyaridok.hu</td>
-            <td WIDTH="197" HEIGHT="22" VALIGN="top" ALIGN="left" NOWRAP><font face="Arial"><strong><a href="Magyar.htm">Magyar,</a><span lang="hu">&nbsp;&nbsp;<a href="http://delicast.com/tv/Hungary/M1_TV">M1 TV</a></span></strong></font></td>
-            <td WIDTH="168" HEIGHT="22" VALIGN="top" ALIGN="left" NOWRAP><b><font face="Arial" color="#00CCFF"><span lang="en-us"><a href="http://www.freedict.com/onldict/hun.html">Freedict-Sz</a></span><a href="http://www.freedict.com/onldict/hun.html">o<span lang="hu">t</span>a<span lang="hu">r</span></a></font></b></td>
-            <td WIDTH="402" HEIGHT="23" VALIGN="top" ALIGN="left" NOWRAP><b><a href="http://www.wcsci.org">SC Website</a></b></td>
-          </tr>
-          <tr>
-            <td WIDTH="184" HEIGHT="21" VALIGN="top" ALIGN="left" NOWRAP><b><font color="#0000FF" face="Arial"><a href="http://www.orvosiangol.com">Orvosi Angol</a>*</font></b></td>
-            <td WIDTH="197" HEIGHT="21" VALIGN="top" ALIGN="left" NOWRAP><b><a href="http://www.mupa.hu/multimedia/mupa-radio">M*Pa. Radio</a></b></td>
-            <td WIDTH="168" HEIGHT="26" VALIGN="top" ALIGN="left" NOWRAP><b><font face="Arial"><a href="http://www.szotar.sztaki.hu">S<span lang="hu">z</span>o<span lang="hu">t</span>a<span lang="hu">r-sztaki</span></a></font></b></td>
-            <td WIDTH="402" HEIGHT="27" VALIGN="top" ALIGN="left" NOWRAP><b><a href="https://www.facebook.com/groups/238119413024943/">SC Facebook</a></b></td>
-          </tr>
-          <tr>
-            <td WIDTH="184" HEIGHT="2" VALIGN="top" ALIGN="left" NOWRAP><b><font face="Arial"><a href="http://www.etelallergia.hu">Etelallergia</a></font></b></td>
-            <td WIDTH="197" HEIGHT="8" VALIGN="top" ALIGN="left" NOWRAP><b><a href="http://player.capradio.org/player.aspx?stationid=0">Capital Radio</a></b></td>
-            <td WIDTH="168" HEIGHT="8" VALIGN="top" ALIGN="left" NOWRAP><!-  <font face="Arial"><b> <!- <a href="http://gmail.google.com"></b><font face="Arial"><a href="http://mail.google.com/mail/u/0/#inbox"><b>G Mail</b></a></font></td>
-              <td WIDTH="402" HEIGHT="8" VALIGN="top" ALIGN="left" NOWRAP><a href="../HungHist/index.html">Hungarian History</a>&nbsp; for YAE</td>
-          </tr>
-          <tr>
-            <td WIDTH="184" HEIGHT="22" VALIGN="top" ALIGN="left" NOWRAP><b><font face="Arial"><a href="http://www.utikalauz.com">Utikalauz.com</a></font></b></td>
-            <td WIDTH="197" HEIGHT="22" VALIGN="top" ALIGN="left" NOWRAP><b><a href="http://kalw.org/listen-kalw#stream/0">KALW </a> </b></td>
-            <td WIDTH="168" HEIGHT="22" VALIGN="top" ALIGN="left" NOWRAP><b><a href="http://www.docs.google.com">Goog</a></b></td>
-            <td WIDTH="402" HEIGHT="23" VALIGN="top" ALIGN="left" NOWRAP><a href="../HungLang/index.html">Hungarian Language Guide</a>&nbsp;&nbsp;for YAE&nbsp;&nbsp;&nbsp;</td>
-          </tr>
-          <tr>
-            <td WIDTH="197" HEIGHT="23" ALIGN="left" NOWRAP><b><a href="http://www.titantv.com">TV Pogram Guide</a></b></td>
-            <td WIDTH="168" HEIGHT="23" VALIGN="top" ALIGN="left" NOWRAP><b><a href="http://www.pluto.tv">Pluto TV</a></b></td>
-            <td WIDTH="402" HEIGHT="23" VALIGN="top" ALIGN="left" NOWRAP>
-              <b>
-                <a href="https://docs.google.com/spreadsheets/d/11a-2twiMkKRwAbi4f1S0jXCJwu3NgWkB4ql1s--OY6M/edit#gid=1180414034&vpid=A1">YAE Comm.s</a>
-                <a href="https://docs.google.com/spreadsheets/d/1w4GTS5S08OhBl_kIgByL0jTRntSdtn1CbQ1YSDFFbmU/edit#gid=558361976&vpid=A1">Timeln</a>
-              </b>
-            </td>
-          </tr>
-        </table>
+        <p class="title">Böröcz Istvan's Index</p>
       </div>
     </section>
 
-    <footer class="footer">
-      <div class="content has-text-centered">
-        <p>Copyright 1998-2022 &nbsp;Istvan Böröcz MD</p>
+    <section class="section">
+      <div class="field is-narrow">
+        <div class="control has-icons-left is-small">
+          <form action="https://www.google.com/search" id="search-form" class="control" method="get" name="searchform" target="_blank">
+            <input autocomplete="off" id="search-input" class="input is-small" name="q" required="required" type="text" autofocus="autofocus">
+            <span class="icon is-small is-left">
+              <i class="fa-solid fa-magnifying-glass"></i>
+            </span>
+          </form>
+        </div>
       </div>
-    </footer>
+
+      <ul>
+        <li>
+          <a href="https://mail.google.com">
+            <i class="fa-solid fa-envelope"></i>&nbsp;&nbsp;Mail
+          </a>
+        </li>
+        <li>
+          <a href="https://www.weather.com">
+            <i class="fa-solid fa-wind"></i>&nbsp;&nbsp;Weather
+          </a>
+        </li>
+        <li>
+          <a href="https://www.optimalsportswatch.com">
+            <i class="fa-solid fa-futbol"></i>&nbsp;&nbsp;Sports on TV
+          </a>
+        </li>
+      </ul>
+
+      <hr/>
+
+      <ul>
+        <li>
+          <a href="https://hirtv.hu">
+            <i class="fa-solid fa-tv"></i>&nbsp;&nbsp;Magyar TV Hirek
+          </a>
+        </li>
+        <li>
+          <a href="https://player.capradio.org/streams">
+            <i class="fa-solid fa-radio"></i>&nbsp;&nbsp;Capital Radio
+          </a>
+        </li>
+        <li>
+          <a href="https://scholar.google.com/">
+            <i class="fa-solid fa-flask"></i>&nbsp;&nbsp;Scholar
+          </a>
+        </li>
+      </ul>
+
+      <hr/>
+
+      <h2 class="is-underlined">Sister City</h2>
+      <ul>
+        <li>
+          <a href="https://www.wcsci.org">
+            <i class="fa-solid fa-city"></i>&nbsp;&nbsp;Website
+          </a>
+        </li>
+        <li>
+          <a href="https://www.facebook.com/groups/238119413024943/">
+            <i class="fa-brands fa-facebook"></i>&nbsp;&nbsp;Facebook
+          </a>
+        </li>
+
+      </ul>
+
+    </section>
 
   </body>
 
