Increased size, using GitHub Desktop.

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     </section>
 
     <section class="section">
-      <div class="field is-narrow">
+      <div class="field">
         <div class="control has-icons-left is-small">
           <form action="https://www.google.com/search" id="search-form" class="control" method="get" name="searchform" target="_blank">
-            <input autocomplete="off" id="search-input" class="input is-small" name="q" required="required" type="text" autofocus="autofocus">
+            <input autocomplete="off" id="search-input" class="input is-normal" name="q" required="required" type="text" autofocus="autofocus">
             <span class="icon is-small is-left">
               <i class="fa-solid fa-magnifying-glass"></i>
             </span>
@@ -34,17 +34,17 @@
 
       <ul>
         <li>
-          <a href="https://mail.google.com">
+          <a class="is-size-4" href="https://mail.google.com">
             <i class="fa-solid fa-envelope"></i>&nbsp;&nbsp;Mail
           </a>
         </li>
         <li>
-          <a href="https://www.weather.com">
+          <a class="is-size-4" href="https://www.weather.com">
             <i class="fa-solid fa-wind"></i>&nbsp;&nbsp;Weather
           </a>
         </li>
         <li>
-          <a href="https://www.optimalsportswatch.com">
+          <a class="is-size-4" href="https://www.optimalsportswatch.com">
             <i class="fa-solid fa-futbol"></i>&nbsp;&nbsp;Sports on TV
           </a>
         </li>
@@ -54,17 +54,17 @@
 
       <ul>
         <li>
-          <a href="https://hirtv.hu">
+          <a class="is-size-4" href="https://hirtv.hu">
             <i class="fa-solid fa-tv"></i>&nbsp;&nbsp;Magyar TV Hirek
           </a>
         </li>
         <li>
-          <a href="https://player.capradio.org/streams">
+          <a class="is-size-4" href="https://player.capradio.org/streams">
             <i class="fa-solid fa-radio"></i>&nbsp;&nbsp;Capital Radio
           </a>
         </li>
         <li>
-          <a href="https://scholar.google.com/">
+          <a class="is-size-4" href="https://scholar.google.com/">
             <i class="fa-solid fa-flask"></i>&nbsp;&nbsp;Scholar
           </a>
         </li>
@@ -72,15 +72,15 @@
 
       <hr/>
 
-      <h2 class="is-underlined">Sister City</h2>
+      <h2 class="is-size-3 is-underlined">Sister City</h2>
       <ul>
         <li>
-          <a href="https://www.wcsci.org">
+          <a class="is-size-4" href="https://www.wcsci.org">
             <i class="fa-solid fa-city"></i>&nbsp;&nbsp;Website
           </a>
         </li>
         <li>
-          <a href="https://www.facebook.com/groups/238119413024943/">
+          <a class="is-size-4" href="https://www.facebook.com/groups/238119413024943/">
             <i class="fa-brands fa-facebook"></i>&nbsp;&nbsp;Facebook
           </a>
         </li>
